# LLM4CP

./: .gitignore  PAD.py  README.md  data.py  metrics.py  pyproject.toml  test_fdd_full.py  test_tdd_full.py  train.py
doc/: system_design.md
models/: GPT4CP.py
utils/: __init__.py  logger.py  plotting.py
