[project]
name = "llm4cp"
version = "0.1.0"
description = "LLM4CP: Adapting Large Language Models for Channel Prediction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.0.0",
    "numpy==1.24.4",
    "matplotlib==3.7.5",
    "h5py==3.10.0",
    "hdf5storage==0.1.19",
    "pandas==2.0.3",
    "scipy==1.10.1",
    "transformers==4.37.2",
    "peft==0.11.1",
    "einops==0.7.0",
    "huggingface-hub>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
